--- a/breast_cancer_ml/Data Acquisition.ipynb
+++ b/breast_cancer_ml/Data Acquisition.ipynb
@@ -11,43 +11,45 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from sklearn.preprocessing import StandardScaler\n"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "import sys\n",
+    "from pathlib import Path"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "063e164a-f624-4cfb-b1b3-7bd94b6d3c13",
+   "id": "745d1c41",
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_dir = r\"C:\\Users\\Maryl\\Downloads\\INST 414\"\n",
-    "file_name = \"breast-cancer.csv\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "ad37276c-b3f3-4b52-9189-02d03564196d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "full_path = os.path.join(base_dir, file_name)"
+    "sys.path.append(str(Path.cwd().parents[0]))\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4cb2adaa-0184-43c8-a46d-4acbcf309a21",
+   "id": "57392a70",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(full_path)"
+    "from breast_cancer_ml import config\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "fd86a434",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv(config.RAW_DATA_DIR / \"breast-cancer.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "9acdeb0e-241b-4817-a4be-6dce148c44d8",
    "metadata": {},
    "outputs": [
@@ -434,7 +436,7 @@
        "[569 rows x 32 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -925,35 +927,11 @@
     "# missing_count_total = df.isnull().sum().sum()\n",
     "# print(missing_count_total)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "82e384dc-23d0-4c74-bd9e-9515939131ed",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bb4a0af0-5530-4b71-af69-15bdd9926580",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ebfd4796-4015-4815-b735-0576ff87b6fc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -967,7 +945,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
